--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.29.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.12.10",
     "next": "13.2.4",
     "notion-to-md": "^2.7.0",
     "react": "18.2.0",
