--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.6",
+    "react-photo-album": "^2.2.2",
     "styled-components": "^5.3.9",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "yet-another-react-lightbox": "^3.9.0"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
