--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.6",
     "react-photo-album": "^2.2.2",
+    "react-youtube": "^10.1.0",
     "sharp": "^0.32.4",
     "styled-components": "^5.3.9",
     "typescript": "5.0.2",
