--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^2.29.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "file-loader": "^6.2.0",
     "framer-motion": "^10.12.10",
     "next": "13.2.4",
     "notion-to-md": "^2.7.0",
@@ -27,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.6",
     "react-photo-album": "^2.2.2",
+    "react-player": "^2.12.0",
     "react-youtube": "^10.1.0",
     "sharp": "^0.32.4",
     "styled-components": "^5.3.9",
